<resources>
    <string name="app_name">yGuide</string>
    <string name="titleMapFragment">Map</string>
    <string name="wifiListFragment">WiFi in area</string>
    <string name="dbListFragment">Database</string>
    <string name="menu_item_settings">Settings</string>

<!-- Preferences -->
    <string name="pref_gps_title"> GPS</string>
    <string name="pref_wifi_title"> WiFi</string>
    <string name="pref_summary_mod"> In this mode, the program performs automatic scanning and gets more accurate location coordinates.</string>
    <string name="pref_title_mod">Search mode</string>
    <string name="refer_gps_settings">GPS system settings</string>
    <string name="pref_summary_closeOn"> Scan encrypted access points</string>
    <string name="pref_title_closeOn">Scan all</string>
    <string name ="pref_syncConnectionTypes_default">6</string>


    <!-- Preferences GPS-->
    <string name="title_count_gps"> Number of satellites</string>
    <string name="summary_count_gps"> For safe work with coordinates</string>

    <!-- Prefer WiFi -->
    <string name="title_wifi_min_signal"> Minimum signal to search</string>
    <string name="summary_wifi_min_signal"> The service of scanning will ignore signal lower than this. Attention! You should  input unsigned quantity.</string>
    <string name="title_wifi_auto_min_signal"> Minimum signal to automatic adding</string>
    <string name="summary_wifi_auto_min_signal"> The service of automatic adding in database will ignore signal lower than this. Attention! You should  input unsigned quantity.</string>

    <!-- Preferences MAP-->
    <string name="summary_map_ava_radius">Markers will be visible only in this radius</string>
    <string name="title_map_ava_radius"> Available radius</string>
    <string name="error_adding_db"> Oops, error #02. Please, try again</string>
    <string name="pref_count_sat_dialog_title">Choose number of satellites</string>
    <string name="menu_item_about_author">About author</string>
    <string name="navigation_view_header_title">Hello, user!</string>
</resources>
